# bootstrap-edge-yolov8

./: .dockerignore  .flake8  .gitignore  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml
containers/: Dockerfile
example_applications/: simple_web_viewer.py
src/edge_yolo_demo/: quick_demo.py
src/edge_yolo_demo/cameras/: camera.py  image.py  ovc_camera.py
src/edge_yolo_demo/displays/: display.py  web_display.py
src/edge_yolo_demo/models/: model_output.py  ultralytics_model.py
src/edge_yolo_demo/models/assets/Ultralytics/yolov8n_ncnn_model/: metadata.yaml  model_ncnn.py
